--- a/source/index.html
+++ b/source/index.html
@@ -88,6 +88,14 @@
             </ul>
           </div>
         </section>
+        <section class="offer">
+          <div class="offer__wrapper">
+            <h2 class="visually-hidden">Поиск гостиниц в Сейдоне</h2>
+            <b class="оffer__sentence">Заинтересовались?</b>
+            <p class="offer__description">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+            <button class="button offer__button" type="button">Найти гостиницу</button>
+            <img class="offer__map" src="" alt="Карта Аризоны">
+        </section>
     </main>
 
 
