Разметил блок подвал(footer)

--- a/source/index.html
+++ b/source/index.html
@@ -88,6 +88,7 @@
             </ul>
           </div>
         </section>
+
         <section class="offer">
           <div class="offer__wrapper">
             <h2 class="visually-hidden">Поиск гостиниц в Сейдоне</h2>
@@ -97,7 +98,30 @@
             <img class="offer__map" src="" alt="Карта Аризоны">
         </section>
     </main>
-
+      <footer class="main-footer">
+        <div class="main_footer__wrapper">
+          <div class="main_footer__hashtag">
+            <b class="hashtag">#visitSEDONA</b>
+          </div>
+          <div class="main-footer__social social">
+            <ul class="social__list">
+              <li class="social__item">
+                <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
+              </li>
+              <li class="social__item">
+                <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">Мы в Телеграме</a>
+              </li>
+              <li class="social__item">
+                <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">Мы в Ютубе</a>
+              </li>
+            </ul>
+          </div>
+            <div class="main-footer__copyright copyright">
+            <p class="copyright-text">Разработано</p>
+            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+          </div>
+        </div>
+      </footer>
 
   </body>
 </html>
