Исправление ошибок в index.html при помощи валидатора и генератора html-дерева

--- a/source/index.html
+++ b/source/index.html
@@ -68,7 +68,7 @@
                   <h3 class="advantages__subject">Там есть Мост дьявола</h3>
                   <p class="advantages__numbering" >— №2 —</p>
                   <p class="advantages__description-excerpt">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-                  <img class="advantages__photo" src="" alt="фото Моста дьявола">
+                  <img class="advantages__photo" src="#" alt="фото Моста дьявола">
                 </li>
                 <li class="advantages__item">
                   <h3 class="advantages__subject">Небольшая площадь</h3>
@@ -92,16 +92,17 @@
         <section class="offer">
           <div class="offer__wrapper">
             <h2 class="visually-hidden">Поиск гостиниц в Сейдоне</h2>
-            <b class="оffer__sentence">Заинтересовались?</b>
+            <b class="offer__sentence">Заинтересовались?</b>
             <p class="offer__description">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
             <button class="button offer__button" type="button">Найти гостиницу</button>
-            <img class="offer__map" src="" alt="Карта Аризоны">
+            <img class="offer__map" src="#" alt="Карта Аризоны">
+          </div>
         </section>
     </main>
       <footer class="main-footer">
-        <div class="main_footer__wrapper">
-          <div class="main_footer__hashtag">
-            <b class="hashtag">#visitSEDONA</b>
+        <div class="main-footer__wrapper">
+          <div class="main-footer__hashtag">
+            <b class="hashtag">#visitSedona</b>
           </div>
           <div class="main-footer__social social">
             <ul class="social__list">
@@ -117,11 +118,10 @@
             </ul>
           </div>
             <div class="main-footer__copyright copyright">
-            <p class="copyright-text">Разработано</p>
+            <p class="copyright__text">Разработано</p>
             <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
           </div>
         </div>
       </footer>
-
   </body>
 </html>
