Заменил кнопку на ссылку в offer

--- a/source/index.html
+++ b/source/index.html
@@ -94,7 +94,7 @@
             <h2 class="visually-hidden">Поиск гостиниц в Сейдоне</h2>
             <b class="offer__sentence">Заинтересовались?</b>
             <p class="offer__description">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-            <button class="button offer__button" type="button">Найти гостиницу</button>
+            <a class="button offer__button" href="#">Найти гостиницу</a>
             <img class="offer__map" src="#" alt="Карта Аризоны">
           </div>
         </section>
