--- a/source/catalog.html
+++ b/source/catalog.html
@@ -38,6 +38,71 @@
       </nav>
     </header>
     <main class="main-container">
+
+      <h1 class="visually hidden">Каталог фото и видео Седоны</h1>
+
+      <div class="intro-content">
+        <img class="intro-content__image" src="#" alt="фото каньон">
+        <img class="intro-content__name" src="#" alt="надпись Седона">
+      </div>
+      <section class="gallery-list">
+        <div class="gallery-list__header">
+          <h2 class="gallery-list__title">Фото и видео</h2>
+          <p class="gallery-list__description">Не можете решиться на путешествие<br> из-за курса? Фотографии помогут вам<br> забыть о политике и экономике.</p>
+        </div>
+        <div class="gallery-list__item">
+          <img src="#" alt="Фото дороги во время заката солнца на фоне гор">
+          <h3 class="gallery-list__item-subject">Неродные просторы</h3>
+          <p class="gallery-list__item-author">Автор фото: Борис</p>
+          <button class="button gallery-list__item-button" type="button">
+            <span class="gallery-list__item-icon">
+              <svg class="gallery-list__item-icon-like" width="23" height="21" viewBox="0 0 23 21" fill="gray">
+                <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
+              </svg>
+            </span>
+            <span class="gallery-list__item-number">1350</span>
+          </button>
+        </div>
+        <div class="gallery-list__item">
+          <img src="#" alt="Фото цветущего кактуса на фоне гор">
+          <h3 class="gallery-list__item-subject">Местная растительность</h3>
+          <p class="gallery-list__item-author">Автор фото: Сергей</p>
+          <button class="button gallery-list__item-button" type="button">
+            <span class="gallery-list__item-icon">
+              <svg class="gallery-list__item-icon-like" width="23" height="21" viewBox="0 0 23 21" fill="gray">
+                <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
+              </svg>
+            </span>
+            <span class="gallery-list__item-number">143</span>
+          </button>
+        </div>
+        <div class="gallery-list__item">
+          <img src="#" alt="Фото горного серпантина">
+          <h3 class="gallery-list__item-subject">Дорога на север</h3>
+          <p class="gallery-list__item-author">Автор фото: Петр</p>
+          <button class="button gallery-list__item-button" type="button">
+            <span class="gallery-list__item-icon">
+              <svg class="gallery-list__item-icon-like" width="23" height="21" viewBox="0 0 23 21" fill="gray">
+                <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
+              </svg>
+            </span>
+            <span class="gallery-list__item-number">96</span>
+          </button>
+        </div>
+        <div class="gallery-list__item">
+          <img src="#" alt="Каньон">
+          <h3 class="gallery-list__item-subject">Мост Дьявола</h3>
+          <p class="gallery-list__item-author">Автор фото: Антон</p>
+          <button class="button gallery-list__item-button" type="button">
+            <span class="gallery-list__item-icon">
+              <svg class="gallery-list__item-icon-like" width="23" height="21" viewBox="0 0 23 21" fill="gray">
+                <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
+              </svg>
+            </span>
+            <span class="gallery-list__item-number">254</span>
+          </button>
+        </div>
+      </section>
     </main>
     <footer class="main-footer">
       <div class="main-footer__wrapper">
