создал блок presantation

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -39,7 +39,7 @@
     </header>
     <main class="main-container">
 
-      <h1 class="visually hidden">Каталог фото и видео Седоны</h1>
+      <h1 class="visually-hidden">Каталог фото и видео Седоны</h1>
 
       <div class="intro-content">
         <img class="intro-content__image" src="#" alt="фото каньон">
@@ -101,6 +101,14 @@
             </span>
             <span class="gallery-list__item-number">254</span>
           </button>
+        </div>
+      </section>
+      <section class="presentation">
+        <h2 class="visually-hidden">Видеопрезентация Седоны</h2>
+        <div class="presentation__wrapper">
+          <b class="presentation__text">Все еще сомневаетесь?</b>
+          <p class="presentation__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
+          <img class="presentation__video-image" src="#" alt="Машины едущие по дороге ведущий на мост, вокруг горы">
         </div>
       </section>
     </main>
