добавил ссылке линк и обозначение

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,7 +8,7 @@
   </head>
   <body class="page-body">
     <header class="main-header">
-      <a class="main-header__logo">
+      <a class="main-header__logo" href="index.html" aria-label="Sedona">
         <img class="main-header__logo-image" src="img/logotype-phone.svg" width="185" height="96" alt="Город Седона">
       </a>
       <nav class="main-nav">
