--- a/source/index.html
+++ b/source/index.html
@@ -8,36 +8,38 @@
   </head>
   <body class="page-body">
     <header class="main-header">
-      <a class="main-header__logo">
-        <img class="main-header__logo-image" src="img/logotype-phone.svg" width="185" height="96" alt="Город Седона">
-      </a>
-      <nav class="main-nav">
-        <button class="main-nav__toogle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-        <div class="main-nav__wrapper">
-          <ul class="main-nav__list">
-            <li class="main-nav__item main-nav__item--current">
-              <a>
-                Главная
-              </a>
-            </li>
-            <li class="main-nav__item">
-              <a href="catalog.html">
-                Фото и видео
-              </a>
-            </li>
-            <li class="main-nav__item">
-              <a href="form.html">
-                Форма отзыва
-              </a>
-            </li>
-            <li class="main-nav__item">
-              <a href="https://htmlacademy.ru/">
-                HTML Academy
-              </a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+      <div class="main-header__wrapper">
+        <a class="main-header__logo" href="index.html" aria-label="Sedona">
+          <img class="main-header__logo-image" src="img/logotype-phone.svg" width="185" height="96" alt="Город Седона">
+        </a>
+        <nav class="main-nav">
+          <button class="main-nav__toogle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+          <div class="main-nav__wrapper visually-hidden">
+            <ul class="main-nav__list">
+              <li class="main-nav__item main-nav__item--current">
+                <a>
+                  Главная
+                </a>
+              </li>
+              <li class="main-nav__item">
+                <a href="catalog.html">
+                  Фото и видео
+                </a>
+              </li>
+              <li class="main-nav__item">
+                <a href="form.html">
+                  Форма отзыва
+                </a>
+              </li>
+              <li class="main-nav__item">
+                <a href="https://htmlacademy.ru/">
+                  HTML Academy
+                </a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
     </header>
     <main class="main-container">
 
