--- a/source/index.html
+++ b/source/index.html
@@ -45,63 +45,68 @@
 
       <h1 class="visually-hidden">Поиск гостиниц в городе Седона</h1>
 
-        <section class="advantages">
-          <div class="advantages__wrapper">
-            <h2 class="advantages__title">Седона — небольшой<br> городок в Аризоне,<br> заслуживающий большего!</h2>
-            <p class="advantages__description">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
-            <ul class="advantages__list">
-              <li class="advantages__item">
-                <h3 class="advantages__subject">Настоящий городок</h3>
-                <p class="advantages__numbering" >— №1 —</p>
-                <p class="advantages__description-excerpt">Cедона не аттракцион для туристов, там течет своя жизнь</p>
-                <ul class="advantages__subject-list">
-                  <li class="advantages__subject-item">
-                    <h4 class="advantages__subject-title">Жилье</h4>
-                    <p class="advantages__subject-description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-                  </li>
-                  <li class="advantages__subject-item">
-                    <h4 class="advantages__subject-title">Еда</h4>
-                    <p class="advantages__subject-description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-                  </li>
-                  <li class="advantages__subject-item">
-                    <h4 class="advantages__subject-title">Сувениры</h4>
-                    <p class="advantages__subject-description">Не только китайского, но и местного производства!</p>
-                  </li>
-                </ul>
-                <li class="advantages__item">
-                  <h3 class="advantages__subject">Там есть Мост дьявола</h3>
-                  <p class="advantages__numbering" >— №2 —</p>
-                  <p class="advantages__description-excerpt">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-                  <img class="advantages__photo" src="#" alt="фото Моста дьявола">
-                </li>
-                <li class="advantages__item">
-                  <h3 class="advantages__subject">Небольшая площадь</h3>
-                  <p class="advantages__numbering" >— №3 —</p>
-                  <p class="advantages__description-excerpt">Все интересные места находятся очень близко</p>
-                </li>
-                <li class="advantages__item">
-                  <h3 class="advantages__subject">Красивая дорога</h3>
-                  <p class="advantages__numbering" >— №4 —</p>
-                  <p class="advantages__description-excerpt">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-                </li>
-                <li class="advantages__item">
-                  <h3 class="advantages__subject">Мало туристов</h3>
-                  <p class="advantages__numbering" >— № —</p>
-                  <p class="advantages__description-excerpt">Большинство едет в Гранд Каньон и толпится там</p>
-                </li>
-            </ul>
-          </div>
-        </section>
+      <div class="main-intro">
+        <img class="main-intro__image" src="#" alt="фото каньон">
+        <img class="main-intro__name" src="#" alt="надпись Приветствие Седона">
+      </div>
 
-        <section class="offer">
-          <div class="offer__wrapper">
-            <h2 class="visually-hidden">Поиск гостиниц в Сейдоне</h2>
-            <b class="offer__sentence">Заинтересовались?</b>
-            <p class="offer__description">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-            <a class="button offer__button" href="#">Найти гостиницу</a>
-            <img class="offer__map" src="#" alt="Карта Аризоны">
-          </div>
-        </section>
+      <section class="advantages">
+        <div class="advantages__wrapper">
+          <h2 class="advantages__title">Седона — небольшой<br> городок в Аризоне,<br> заслуживающий большего!</h2>
+          <p class="advantages__description">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+          <ul class="advantages__list">
+            <li class="advantages__item">
+              <h3 class="advantages__subject">Настоящий городок</h3>
+              <p class="advantages__numbering" >— №1 —</p>
+              <p class="advantages__description-excerpt">Cедона не аттракцион для туристов, там течет своя жизнь</p>
+              <ul class="advantages__subject-list">
+                <li class="advantages__subject-item">
+                  <h4 class="advantages__subject-title">Жилье</h4>
+                  <p class="advantages__subject-description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+                </li>
+                <li class="advantages__subject-item">
+                  <h4 class="advantages__subject-title">Еда</h4>
+                  <p class="advantages__subject-description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+                </li>
+                <li class="advantages__subject-item">
+                  <h4 class="advantages__subject-title">Сувениры</h4>
+                  <p class="advantages__subject-description">Не только китайского, но и местного производства!</p>
+                </li>
+              </ul>
+              <li class="advantages__item">
+                <h3 class="advantages__subject">Там есть Мост дьявола</h3>
+                <p class="advantages__numbering" >— №2 —</p>
+                <p class="advantages__description-excerpt">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+                <img class="advantages__photo" src="#" alt="фото Моста дьявола">
+              </li>
+              <li class="advantages__item">
+                <h3 class="advantages__subject">Небольшая площадь</h3>
+                <p class="advantages__numbering" >— №3 —</p>
+                <p class="advantages__description-excerpt">Все интересные места находятся очень близко</p>
+              </li>
+              <li class="advantages__item">
+                <h3 class="advantages__subject">Красивая дорога</h3>
+                <p class="advantages__numbering" >— №4 —</p>
+                <p class="advantages__description-excerpt">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+              </li>
+              <li class="advantages__item">
+                <h3 class="advantages__subject">Мало туристов</h3>
+                <p class="advantages__numbering" >— № —</p>
+                <p class="advantages__description-excerpt">Большинство едет в Гранд Каньон и толпится там</p>
+              </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="offer">
+        <div class="offer__wrapper">
+          <h2 class="visually-hidden">Поиск гостиниц в Сейдоне</h2>
+          <b class="offer__sentence">Заинтересовались?</b>
+          <p class="offer__description">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <a class="button offer__button" href="#">Найти гостиницу</a>
+          <img class="offer__map" src="#" alt="Карта Аризоны">
+        </div>
+      </section>
     </main>
     <footer class="main-footer">
       <div class="main-footer__wrapper">
