поправил блок catalog-intro

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -43,9 +43,9 @@
 
       <h1 class="visually-hidden">Каталог фото и видео Седоны</h1>
 
-      <div class="intro-content">
-        <img class="intro-content__image" src="#" alt="фото каньон">
-        <img class="intro-content__name" src="#" alt="надпись Седона">
+      <div class="catalog-intro">
+        <img class="catalog-intro__image" src="#" alt="фото каньон">
+        <img class="catalog-intro__name" src="#" alt="надпись Седона">
       </div>
       <section class="gallery-list">
         <div class="gallery-list__header">
