--- a/source/index.html
+++ b/source/index.html
@@ -46,14 +46,17 @@
       <h1 class="visually-hidden">Поиск гостиниц в городе Седона</h1>
 
       <div class="main-intro">
-        <img class="main-intro__image" src="#" alt="фото каньон">
-        <img class="main-intro__name" src="#" alt="надпись Приветствие Седона">
+        <div class="main-intro__wrapper">
+          <img class="main-intro__name" src="../img/text-index.svg" width="282" height="214" alt="надпись Приветствие Седона">
+        </div>
       </div>
 
       <section class="advantages">
         <div class="advantages__wrapper">
-          <h2 class="advantages__title">Седона — небольшой<br> городок в Аризоне,<br> заслуживающий большего!</h2>
-          <p class="advantages__description">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+          <div class="advantages__header">
+            <h2 class="advantages__title">Седона — небольшой<br> городок в Аризоне,<br> заслуживающий большего!</h2>
+            <p class="advantages__description">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+          </div>
           <ul class="advantages__list">
             <li class="advantages__item">
               <h3 class="advantages__subject">Настоящий городок</h3>
