создал блок advantages-list__subject

--- a/source/index.html
+++ b/source/index.html
@@ -56,19 +56,32 @@
           <h2 class="advantages-list__title">Седона — небольшой<br> городок в Аризоне,<br> заслуживающий большего!</h2>
           <p class="advantages-list__description">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
         </div>
-        <div class="advantages-list__item-first advantages-list__wrapper advantages-list__item--blue advantages-list__item--triangle">
+        <div class="advantages-list__item advantages-list__wrapper advantages-list__item--blue advantages-list__item--triangle">
           <h3 class="advantages-list__item-subject">Настоящий городок</h3>
-          <p class="advantages__numbering">— №1 —</p>
-          <p class="advantages__description-excerpt">Cедона не аттракцион для туристов, там течет своя жизнь</p>
+          <p class="advantages-list__numbering">— №1 —</p>
+          <p class="advantages-list__description-excerpt">Cедона не аттракцион для туристов, там течет своя жизнь</p>
         </div>
         <div class="advantages-list__item-picture"></div>
-
+        <div class="advantages-list__subject advantages-list__wrapper">
+          <div class="advantages-list__subject-item">
+            <h4 class="advantages-list__subject-title">Жилье</h4>
+            <p class="advantages-list__subject-description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+          </div>
+          <div class="advantages-list__subject-item">
+            <h4 class="advantages-list__subject-title">Еда</h4>
+            <p class="advantages-list__subject-description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+          </div>
+          <div class="advantages-list__subject-item">
+            <h4 class="advantages-list__subject-title">Сувениры</h4>
+            <p class="advantages-list__subject-description">Не только китайского, но и местного производства!</p>
+          </div>
+        </div>
         <ul class="advantages__lis">
           <!-- <li class="advantages__item">
             <h3 class="advantages__subject">Настоящий городок</h3>
             <p class="advantages__numbering" >— №1 —</p>
             <p class="advantages__description-excerpt">Cедона не аттракцион для туристов, там течет своя жизнь</p> -->
-            <ul class="advantages__subject-list">
+            <!-- <ul class="advantages__subject-list">
               <li class="advantages__subject-item">
                 <h4 class="advantages__subject-title">Жилье</h4>
                 <p class="advantages__subject-description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
@@ -81,7 +94,7 @@
                 <h4 class="advantages__subject-title">Сувениры</h4>
                 <p class="advantages__subject-description">Не только китайского, но и местного производства!</p>
               </li>
-            </ul>
+            </ul> -->
             <li class="advantages__item">
               <h3 class="advantages__subject">Там есть Мост дьявола</h3>
               <p class="advantages__numbering" >— №2 —</p>
