--- a/source/index.html
+++ b/source/index.html
@@ -61,7 +61,7 @@
           <p class="advantages-list__numbering">— №1 —</p>
           <p class="advantages-list__description-excerpt">Cедона не аттракцион для туристов, там течет своя жизнь</p>
         </div>
-        <div class="advantages-list__item-picture"></div>
+        <div class="advantages-list__item-picture advantages-list__item-picture--first"></div>
         <div class="advantages-list__subject advantages-list__wrapper">
           <div class="advantages-list__subject-item">
             <h4 class="advantages-list__subject-title">Жилье</h4>
@@ -76,7 +76,29 @@
             <p class="advantages-list__subject-description">Не только китайского, но и местного производства!</p>
           </div>
         </div>
-        <ul class="advantages__lis">
+        <div class="advantages-list__item advantages-list__item-second advantages-list__wrapper advantages-list__item--blue">
+              <h3 class="advantages-list__subject-title">Там есть Мост дьявола</h3>
+              <p class="advantages-list__numbering" >— №2 —</p>
+              <p class="advantages-list__description-excerpt">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+        </div>
+        <div class="advantages-list__item-picture advantages-list__item-picture--second"></div>
+        <div class="advantages-list__item advantages-list__wrapper advantages-list__item--third advantages-list__item--gray">
+          <h3 class="advantages-list__subject-title">Небольшая площадь</h3>
+          <p class="advantages-list__numbering" >— №3 —</p>
+          <p class="advantages-list__description-excerpt">Все интересные места находятся<br> очень близко</p>
+        </div>
+        <div class="advantages-list__item advantages-list__wrapper advantages-list__item--fourth advantages-list__item--gray">
+          <h3 class="advantages-list__subject-title">Красивая дорога</h3>
+          <p class="advantages-list__numbering" >— №4 —</p>
+          <p class="advantages-list__description-excerpt">Ехать в Седону из Лас-Вегаса<br> совсем не скучно!</p>
+        </div>
+        <div class="advantages-list__item advantages-list__wrapper advantages-list__item--fifth advantages-list__item--gray">
+          <h3 class="advantages-list__subject-title">Мало туристов</h3>
+          <p class="advantages-list__numbering" >— №5 —</p>
+          <p class="advantages-list__description-excerpt">Большинство едет в Гранд Каньон<br> и толпится там</p>
+        </div>
+
+        <!-- <ul class="advantages__lis"> -->
           <!-- <li class="advantages__item">
             <h3 class="advantages__subject">Настоящий городок</h3>
             <p class="advantages__numbering" >— №1 —</p>
@@ -95,13 +117,13 @@
                 <p class="advantages__subject-description">Не только китайского, но и местного производства!</p>
               </li>
             </ul> -->
-            <li class="advantages__item">
+            <!-- <li class="advantages__item">
               <h3 class="advantages__subject">Там есть Мост дьявола</h3>
               <p class="advantages__numbering" >— №2 —</p>
               <p class="advantages__description-excerpt">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
               <img class="advantages__photo" src="#" alt="фото Моста дьявола">
-            </li>
-            <li class="advantages__item">
+            </li> -->
+            <!-- <li class="advantages__item">
               <h3 class="advantages__subject">Небольшая площадь</h3>
               <p class="advantages__numbering" >— №3 —</p>
               <p class="advantages__description-excerpt">Все интересные места находятся очень близко</p>
@@ -116,7 +138,7 @@
               <p class="advantages__numbering" >— № —</p>
               <p class="advantages__description-excerpt">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
-        </ul>
+        </ul> -->
       </section>
 
       <section class="offer">
