--- a/source/index.html
+++ b/source/index.html
@@ -56,7 +56,7 @@
           <h2 class="advantages-list__title">Седона — небольшой<br> городок в Аризоне,<br> заслуживающий большего!</h2>
           <p class="advantages-list__description">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
         </div>
-        <div class="advantages-list__item advantages-list__wrapper advantages-list__item--blue advantages-list__item--triangle">
+        <div class="advantages-list__item advantages-list__item--first advantages-list__wrapper advantages-list__item--blue advantages-list__item--triangle">
           <h3 class="advantages-list__item-subject">Настоящий городок</h3>
           <p class="advantages-list__numbering">— №1 —</p>
           <p class="advantages-list__description-excerpt">Cедона не аттракцион для туристов, там течет своя жизнь</p>
@@ -77,68 +77,26 @@
           </div>
         </div>
         <div class="advantages-list__item advantages-list__item-second advantages-list__wrapper advantages-list__item--blue">
-              <h3 class="advantages-list__subject-title">Там есть Мост дьявола</h3>
-              <p class="advantages-list__numbering" >— №2 —</p>
-              <p class="advantages-list__description-excerpt">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+          <h3 class="advantages-list__subject-title">Там есть Мост дьявола</h3>
+          <p class="advantages-list__numbering">— №2 —</p>
+          <p class="advantages-list__description-excerpt">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
         </div>
         <div class="advantages-list__item-picture advantages-list__item-picture--second"></div>
         <div class="advantages-list__item advantages-list__wrapper advantages-list__item--third advantages-list__item--gray">
-          <h3 class="advantages-list__subject-title">Небольшая площадь</h3>
-          <p class="advantages-list__numbering" >— №3 —</p>
+          <h3 class="advantages-list__subject-title advantages-list__subject-title--padding">Небольшая площадь</h3>
+          <p class="advantages-list__numbering">— №3 —</p>
           <p class="advantages-list__description-excerpt">Все интересные места находятся<br> очень близко</p>
         </div>
         <div class="advantages-list__item advantages-list__wrapper advantages-list__item--fourth advantages-list__item--gray">
-          <h3 class="advantages-list__subject-title">Красивая дорога</h3>
-          <p class="advantages-list__numbering" >— №4 —</p>
+          <h3 class="advantages-list__subject-title advantages-list__subject-title--padding">Красивая дорога</h3>
+          <p class="advantages-list__numbering">— №4 —</p>
           <p class="advantages-list__description-excerpt">Ехать в Седону из Лас-Вегаса<br> совсем не скучно!</p>
         </div>
         <div class="advantages-list__item advantages-list__wrapper advantages-list__item--fifth advantages-list__item--gray">
-          <h3 class="advantages-list__subject-title">Мало туристов</h3>
-          <p class="advantages-list__numbering" >— №5 —</p>
+          <h3 class="advantages-list__subject-title advantages-list__subject-title--padding">Мало туристов</h3>
+          <p class="advantages-list__numbering">— №5 —</p>
           <p class="advantages-list__description-excerpt">Большинство едет в Гранд Каньон<br> и толпится там</p>
         </div>
-
-        <!-- <ul class="advantages__lis"> -->
-          <!-- <li class="advantages__item">
-            <h3 class="advantages__subject">Настоящий городок</h3>
-            <p class="advantages__numbering" >— №1 —</p>
-            <p class="advantages__description-excerpt">Cедона не аттракцион для туристов, там течет своя жизнь</p> -->
-            <!-- <ul class="advantages__subject-list">
-              <li class="advantages__subject-item">
-                <h4 class="advantages__subject-title">Жилье</h4>
-                <p class="advantages__subject-description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-              </li>
-              <li class="advantages__subject-item">
-                <h4 class="advantages__subject-title">Еда</h4>
-                <p class="advantages__subject-description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-              </li>
-              <li class="advantages__subject-item">
-                <h4 class="advantages__subject-title">Сувениры</h4>
-                <p class="advantages__subject-description">Не только китайского, но и местного производства!</p>
-              </li>
-            </ul> -->
-            <!-- <li class="advantages__item">
-              <h3 class="advantages__subject">Там есть Мост дьявола</h3>
-              <p class="advantages__numbering" >— №2 —</p>
-              <p class="advantages__description-excerpt">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-              <img class="advantages__photo" src="#" alt="фото Моста дьявола">
-            </li> -->
-            <!-- <li class="advantages__item">
-              <h3 class="advantages__subject">Небольшая площадь</h3>
-              <p class="advantages__numbering" >— №3 —</p>
-              <p class="advantages__description-excerpt">Все интересные места находятся очень близко</p>
-            </li>
-            <li class="advantages__item">
-              <h3 class="advantages__subject">Красивая дорога</h3>
-              <p class="advantages__numbering" >— №4 —</p>
-              <p class="advantages__description-excerpt">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-            </li>
-            <li class="advantages__item">
-              <h3 class="advantages__subject">Мало туристов</h3>
-              <p class="advantages__numbering" >— № —</p>
-              <p class="advantages__description-excerpt">Большинство едет в Гранд Каньон и толпится там</p>
-            </li>
-        </ul> -->
       </section>
 
       <section class="offer">
