изменил разметку и стилизовал блок offer

--- a/source/index.html
+++ b/source/index.html
@@ -103,9 +103,11 @@
         <div class="offer__wrapper">
           <h2 class="visually-hidden">Поиск гостиниц в Сейдоне</h2>
           <b class="offer__sentence">Заинтересовались?</b>
-          <p class="offer__description">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-          <a class="button offer__button" href="#">Найти гостиницу</a>
-          <img class="offer__map" src="#" alt="Карта Аризоны">
+          <p class="offer__description">Укажите предполагаемые даты<br> поездки, и мы покажем вам лучшие<br> предложения гостиниц в Седоне</p>
+          <a class="button button--blue offer__button" href="#">Найти гостиницу</a>
+        </div>
+        <div class="offer__map-wrapper">
+          <img class="offer__map" src="./img/map-mobile@1x.jpg" width="320" height="350" alt="Карта Аризоны">
         </div>
       </section>
     </main>
