--- a/source/catalog.html
+++ b/source/catalog.html
@@ -41,7 +41,7 @@
         </nav>
       </div>
     </header>
-    <main class="main-container">
+    <main class="main-catalog">
 
       <h1 class="visually-hidden">Каталог фото и видео Седоны</h1>
 
@@ -54,10 +54,10 @@
           <p class="gallery-list__description">Не можете решиться на путешествие<br> из-за курса? Фотографии помогут вам<br> забыть о политике и экономике.</p>
         </div>
         <div class="gallery-list__item">
-          <img src="#" alt="Фото дороги во время заката солнца на фоне гор">
+          <img class="gallery-list__photo" src="../img/photo-1-mobile@1x.jpg" alt="Фото дороги во время заката солнца на фоне гор">
           <h3 class="gallery-list__item-subject">Неродные просторы</h3>
           <p class="gallery-list__item-author">Автор фото: Борис</p>
-          <button class="button gallery-list__item-button" type="button">
+          <button class="gallery-list__item-button" type="button">
             <span class="gallery-list__item-icon">
               <svg class="gallery-list__item-icon-like" width="23" height="21" viewBox="0 0 23 21" fill="gray">
                 <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
@@ -67,10 +67,10 @@
           </button>
         </div>
         <div class="gallery-list__item">
-          <img src="#" alt="Фото цветущего кактуса на фоне гор">
+          <img class="gallery-list__photo" src="../img/photo-2-mobile@1x.jpg" alt="Фото цветущего кактуса на фоне гор">
           <h3 class="gallery-list__item-subject">Местная растительность</h3>
           <p class="gallery-list__item-author">Автор фото: Сергей</p>
-          <button class="button gallery-list__item-button" type="button">
+          <button class="gallery-list__item-button" type="button">
             <span class="gallery-list__item-icon">
               <svg class="gallery-list__item-icon-like" width="23" height="21" viewBox="0 0 23 21" fill="gray">
                 <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
@@ -80,10 +80,10 @@
           </button>
         </div>
         <div class="gallery-list__item">
-          <img src="#" alt="Фото горного серпантина">
+          <img class="gallery-list__photo" src="../img/photo-3-mobile@1x.jpg" alt="Фото горного серпантина">
           <h3 class="gallery-list__item-subject">Дорога на север</h3>
           <p class="gallery-list__item-author">Автор фото: Петр</p>
-          <button class="button gallery-list__item-button" type="button">
+          <button class="gallery-list__item-button" type="button">
             <span class="gallery-list__item-icon">
               <svg class="gallery-list__item-icon-like" width="23" height="21" viewBox="0 0 23 21" fill="gray">
                 <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
@@ -93,10 +93,10 @@
           </button>
         </div>
         <div class="gallery-list__item">
-          <img src="#" alt="Каньон">
+          <img class="gallery-list__photo" src="../img/photo-4-mobile@1x.jpg" alt="Каньон">
           <h3 class="gallery-list__item-subject">Мост Дьявола</h3>
           <p class="gallery-list__item-author">Автор фото: Антон</p>
-          <button class="button gallery-list__item-button" type="button">
+          <button class="gallery-list__item-button" type="button">
             <span class="gallery-list__item-icon">
               <svg class="gallery-list__item-icon-like" width="23" height="21" viewBox="0 0 23 21" fill="gray">
                 <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
@@ -110,8 +110,11 @@
         <h2 class="visually-hidden">Видеопрезентация Седоны</h2>
         <div class="presentation__wrapper">
           <b class="presentation__text">Все еще сомневаетесь?</b>
-          <p class="presentation__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
-          <img class="presentation__video-image" src="#" alt="Машины едущие по дороге ведущий на мост, вокруг горы">
+          <p class="presentation__description">Смотрите видеопрезентацию и<br> скорее за билетами, пока они не<br> подорожали в очередной раз!</p>
+          <video class="presentation__video-image" width="280" height="177" poster="video-mobile@1x.png" title="Машины едущие по дороге ведущий на мост, вокруг горы">
+            <source src="#" type="video/mp4">
+            <source src="#" type="video/ogg">
+          </video>
         </div>
       </section>
     </main>
