обновил стилизацию в main-header и maint intro  на главной странице  и добавил картинок

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -14,24 +14,24 @@
         </a>
         <nav class="main-nav">
           <button class="main-nav__toogle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-          <div class="main-nav__wrapper visually-hidden">
-            <ul class="main-nav__list">
-              <li class="main-nav__item">
+          <div class="main-nav__wrapper">
+            <ul class="main-nav__list site-list">
+              <li class="site-list__item">
                 <a href="index.html">
                   Главная
                 </a>
               </li>
-              <li class="main-nav__item main-nav__item--current">
+              <li class="site-list__item site-list__item--current">
                 <a>
                   Фото и видео
                 </a>
               </li>
-              <li class="main-nav__item">
+              <li class="site-list__item">
                 <a href="form.html">
                   Форма отзыва
                 </a>
               </li>
-              <li class="main-nav__item">
+              <li class="site-list__item">
                 <a href="https://htmlacademy.ru/">
                   HTML Academy
                 </a>
