--- a/source/index.html
+++ b/source/index.html
@@ -12,26 +12,31 @@
         <a class="main-header__logo" href="index.html" aria-label="Sedona">
           <img class="main-header__logo-image" src="img/logotype-phone.svg" width="185" height="96" alt="Город Седона">
         </a>
-        <nav class="main-nav">
+        <nav class="main-nav main-nav--closed">
           <button class="main-nav__toogle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-          <div class="main-nav__wrapper visually-hidden">
-            <ul class="main-nav__list">
-              <li class="main-nav__item main-nav__item--current">
+          <div class="main-nav__wrapper">
+            <ul class="main-nav__list site-list">
+              <li class="site-list__item site-list__item--current">
                 <a>
                   Главная
                 </a>
               </li>
-              <li class="main-nav__item">
+              <li class="site-list__item">
                 <a href="catalog.html">
                   Фото и видео
                 </a>
               </li>
-              <li class="main-nav__item">
+              <li class="site-list__item site-list__logo">
+                <a class="site-list__link" href="index.html" aria-label="Sedona">
+                  <img class="main-header__logo-image" src="img/logotype-phone.svg" width="185" height="96" alt="Город Седона">
+                </a>
+              </li>
+              <li class="site-list__item">
                 <a href="form.html">
                   Форма отзыва
                 </a>
               </li>
-              <li class="main-nav__item">
+              <li class="site-list__item">
                 <a href="https://htmlacademy.ru/">
                   HTML Academy
                 </a>
