--- a/source/index.html
+++ b/source/index.html
@@ -125,7 +125,7 @@
       </main>
 
       <footer class="main-footer">
-        <div class="main-footer__wrapper">
+        <div class="main-footer__container">
           <div class="main-footer__hashtag">
             <b class="hashtag">#visitSedona</b>
           </div>
