изменил название на  inner.less

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -26,6 +26,11 @@
                   Фото и видео
                 </a>
               </li>
+              <li class="site-list__item site-list__logo">
+                <a class="site-list__link" href="index.html" aria-label="Sedona">
+                  <img class="main-header__logo-image" src="img/logotype-phone.svg" width="185" height="96" alt="Город Седона">
+                </a>
+              </li>
               <li class="site-list__item">
                 <a href="form.html">
                   Форма отзыва
@@ -45,8 +50,8 @@
 
       <h1 class="visually-hidden">Каталог фото и видео Седоны</h1>
 
-      <div class="catalog-intro">
-        <img class="catalog-intro__name" src="../img/text-sedona.svg" alt="надпись Седона">
+      <div class="inner-intro">
+        <img class="inner-intro__name" src="../img/text-sedona.svg" width="229" height="29" alt="надпись Седона">
       </div>
 
       <section class="gallery-list">
