--- a/source/index.html
+++ b/source/index.html
@@ -84,7 +84,7 @@
               <p class="advantages-list__subject-description">Не только китайского, но и местного производства!</p>
             </div>
           </div>
-          <div class="advantages-list__wrapper-block--reverse">
+          <div class="advantages-list__wrapper-block advantages-list__wrapper-block--reverse">
             <div class="advantages-list__item advantages-list__item-second advantages-list__wrapper advantages-list__item--blue">
               <h3 class="advantages-list__subject-title">Там есть Мост дьявола</h3>
               <p class="advantages-list__numbering">— №2 —</p>
