стилизация выпадающей менюшки

--- a/source/index.html
+++ b/source/index.html
@@ -13,8 +13,8 @@
           <a class="main-header__logo" href="index.html" aria-label="Sedona">
             <img class="main-header__logo-image" src="img/logotype-phone.svg" width="185" height="96" alt="Город Седона">
           </a>
-          <nav class="main-nav main-nav--closed">
-            <button class="main-nav__toogle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+          <nav class="main-nav main-nav--opened">
+            <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
             <div class="main-nav__wrapper">
               <ul class="main-nav__list site-list">
                 <li class="site-list__item site-list__item--current">
