создал по макету лайва бурегерное меню

--- a/source/index.html
+++ b/source/index.html
@@ -13,7 +13,7 @@
           <a class="main-header__logo" href="index.html" aria-label="Sedona">
             <img class="main-header__logo-image" src="img/logotype-phone.svg" width="185" height="96" alt="Город Седона">
           </a>
-          <nav class="main-nav main-nav--opened">
+          <nav class="main-nav main-nav--opened main-nav--nojs">
             <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
             <div class="main-nav__wrapper">
               <ul class="main-nav__list site-list">
@@ -169,5 +169,7 @@
         </div>
       </footer>
     </div>
+
+  <script src="./js/script.js"></script>
   </body>
 </html>
