стилизовал кнопки в футуре

--- a/source/index.html
+++ b/source/index.html
@@ -116,17 +116,17 @@
           </div>
           <div class="advantages-list__wrapper-block advantages-list__wrapper-block__grid advantages-list__wrapper-block--gray">
             <div class="advantages-list__item advantages-list__wrapper-item advantages-list__item--third advantages-list__item--gray">
-              <h3 class="advantages-list__item-subject advantages-list__subject-title--padding">Небольшая<br> площадь</h3>
+              <h3 class="advantages-list__item-subject advantages-list__subject-title-padding">Небольшая<br> площадь</h3>
               <p class="advantages-list__numbering">— №3 —</p>
               <p class="advantages-list__description-excerpt">Все интересные места находятся<br> очень близко</p>
             </div>
             <div class="advantages-list__item advantages-list__wrapper-item advantages-list__item--fourth advantages-list__item--gray">
-              <h3 class="advantages-list__item-subject advantages-list__subject-title--padding">Красивая<br> дорога</h3>
+              <h3 class="advantages-list__item-subject advantages-list__subject-title-padding">Красивая<br> дорога</h3>
               <p class="advantages-list__numbering">— №4 —</p>
               <p class="advantages-list__description-excerpt">Ехать в Седону из Лас-Вегаса<br> совсем не скучно!</p>
             </div>
             <div class="advantages-list__item advantages-list__wrapper-item advantages-list__item--fifth advantages-list__item--gray">
-              <h3 class="advantages-list__item-subject advantages-list__subject-title--padding">Мало<br> туристов</h3>
+              <h3 class="advantages-list__item-subject advantages-list__subject-title-padding">Мало<br> туристов</h3>
               <p class="advantages-list__numbering">— №5 —</p>
               <p class="advantages-list__description-excerpt">Большинство едет в Гранд Каньон<br> и толпится там</p>
             </div>
@@ -138,7 +138,7 @@
             <h2 class="visually-hidden">Поиск гостиниц в Сейдоне</h2>
             <b class="offer__sentence">Заинтересовались?</b>
             <p class="offer__description">Укажите предполагаемые даты<br> поездки,<br> и мы покажем вам лучшие<br> предложения гостиниц в Седоне</p>
-            <a class="button button--blue offer__button" href="#">Найти гостиницу</a>
+            <a class="button button--blue offer__button offer__button--disabled" href="#">Найти гостиницу</a>
           </div>
           <div class="offer__map">
             <iframe
@@ -186,8 +186,8 @@
             </ul>
           </div>
           <div class="main-footer__copyright copyright">
-            <p class="copyright__text">Разработано</p>
             <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+              <p class="copyright__text">Разработано</p>
               <span class="visually-hidden">HTML Academy</span>
               <svg width="27" height="35" viewBox="0 0 27 35" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M13.6 0H13.5L0 1.4V26.1L13.5 34.1L26.9 26.1V1.4L13.6 0ZM25 12.1L13.5 5.3V5.2H13.4L13.3 5.1V5.2L1.9 12.1V3.1L13.4 1.9L25 3.1V12.1ZM13.4 6.8L24.9 13.5L20.4 16.1L13.3 11.9V13.3L19.2 16.8L18.3 17.3L13.3 14.3V15.7L17.1 18L16.3 18.5L13.3 16.7V18.1L15.2 19.2L13.4 20.3L2 13.6L13.4 6.8ZM1.9 15.1L13.3 21.9V22.9L5.4 18.2V19.6L13.4 24.4V25.5L5.4 20.8V22.2L13.4 27L21.5 22.1V16.9L24.9 14.9V24.9L13.4 31.8L1.9 25V15.1Z" fill="black"/>
