закончил сттилизацию планшетной и десктопной версии

--- a/source/form.html
+++ b/source/form.html
@@ -52,7 +52,7 @@
         <h1 class="visually-hidden">Форма отзыва о городе Седона</h1>
 
         <div class="inner-intro">
-          <img class="inner-intro__name" src="../img/text-sedona.svg" alt="надпись Седона">
+          <img class="inner-intro__name" src="./img/text-sedona.svg" alt="надпись Седона">
         </div>
 
         <div class="main-form__wrapper main-form__wrapper--flex">
@@ -64,7 +64,7 @@
           <section class="testimonials-section">
             <h2 class="visually-hidden">Форма отзыва</h2>
             <form class="testimonials-form" action="https://echo.htmlacademy.ru/" method="post">
-              <div class="testimonials-filters testimonials-filters-grid">
+              <div class="testimonials-filters testimonials-filters-position">
                   <div class="testimonials-filters__group visitor">
                     <label class="testimonials-filters__title">Представьтесь:</label>
                     <div class="field">
@@ -115,7 +115,7 @@
                   </div>
 
                   <div class="testimonials-filters__group landmark">
-                    <label class="testimonials-filters__title">Посещенные достопримечательности:</label>
+                    <label class="testimonials-filters__title">Посещенные<br> достопримечательности:</label>
                     <div class="checkbox">
                       <label class="checkbox__label">
                         <input class="visually-hidden checkbox__input" type="checkbox" name="landmark" value="1" checked>
