--- a/source/index.html
+++ b/source/index.html
@@ -28,7 +28,7 @@
       <header class="main-header">
         <div class="main-header__wrapper">
           <a class="main-header__logo" href="index.html" aria-label="Sedona">
-            <img class="main-header__logo-image" src="img/logotype-phone.svg" width="185" height="96" alt="Город Седона">
+            <img class="main-header__logo-image" src="./img/logotype-phone.svg" width="185" height="96" alt="Город Седона">
           </a>
           <nav class="main-nav main-nav--opened main-nav--nojs">
             <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
@@ -46,7 +46,7 @@
                 </li>
                 <li class="site-list__item site-list__logo">
                   <a class="site-list__link" href="index.html" aria-label="Sedona">
-                    <img class="main-header__logo-image" src="img/logotype-phone.svg" width="185" height="96" alt="Город Седона">
+                    <img class="main-header__logo-image" src="./img/logotype-phone.svg" width="185" height="96" alt="Город Седона">
                   </a>
                 </li>
                 <li class="site-list__item">
@@ -70,7 +70,7 @@
 
         <div class="main-intro">
           <div class="main-intro__wrapper">
-            <img class="main-intro__name" src="../img/text-index.svg" width="282" height="214" alt="надпись Приветствие Седона">
+            <img class="main-intro__name" src="./img/text-index.svg" width="282" height="214" alt="надпись Приветствие Седона">
           </div>
         </div>
 
