--- a/source/catalog.html
+++ b/source/catalog.html
@@ -11,7 +11,7 @@
       <header class="main-header">
         <div class="main-header__wrapper">
           <a class="main-header__logo" href="index.html" aria-label="Sedona">
-            <img class="main-header__logo-image" src="img/logotype-phone.svg" width="185" height="96" alt="Город Седона">
+            <img class="main-header__logo-image" src="./img/logotype-phone.svg" width="185" height="96" alt="Город Седона">
           </a>
           <nav class="main-nav main-nav--opened main-nav--nojs">
             <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
@@ -29,7 +29,7 @@
                 </li>
                 <li class="site-list__item site-list__logo">
                   <a class="site-list__link" href="index.html" aria-label="Sedona">
-                    <img class="main-header__logo-image" src="img/logotype-phone.svg" width="185" height="96" alt="Город Седона">
+                    <img class="main-header__logo-image" src="./img/logotype-phone.svg" width="185" height="96" alt="Город Седона">
                   </a>
                 </li>
                 <li class="site-list__item">
@@ -52,7 +52,7 @@
         <h1 class="visually-hidden">Каталог фото и видео Седоны</h1>
 
         <div class="inner-intro">
-          <img class="inner-intro__name" src="../img/text-sedona.svg" width="229" height="29" alt="надпись Седона">
+          <img class="inner-intro__name" src="./img/text-sedona.svg" width="229" height="29" alt="надпись Седона">
         </div>
 
         <section class="gallery-list">
@@ -62,9 +62,9 @@
           </div>
           <div class="gallery-list__item gallery-list__item--1">
             <picture class="gallery-list__photo">
-              <source media="(min-width: 1200px)" srcset="img/photo-1-desktop.jpg">
-              <source media="(min-width: 768px)" srcset="img/photo-1-tablet.jpg">
-              <img src="../img/photo-1-mobile@1x.jpg" alt="Фото дороги во время заката солнца на фоне гор">
+              <source media="(min-width: 1200px)" srcset="./mg/photo-1-desktop.jpg">
+              <source media="(min-width: 768px)" srcset="./img/photo-1-tablet.jpg">
+              <img src="./img/photo-1-mobile@1x.jpg" alt="Фото дороги во время заката солнца на фоне гор">
             </picture>
             <div class="gallery-list__wrapper gallery-list__wrapper--gray">
               <div class="gallery-list__wrapper-description">
@@ -85,9 +85,9 @@
           </div>
           <div class="gallery-list__item gallery-list__item--2">
             <picture class="gallery-list__photo">
-              <source media="(min-width: 1200px)" srcset="img/photo-2-desktop.jpg">
-              <source media="(min-width: 768px)" srcset="img/photo-2-tablet.jpg">
-              <img src="../img/photo-2-mobile@1x.jpg" alt="Фото цветущего кактуса на фоне гор">
+              <source media="(min-width: 1200px)" srcset="./img/photo-2-desktop.jpg">
+              <source media="(min-width: 768px)" srcset="./img/photo-2-tablet.jpg">
+              <img src="./img/photo-2-mobile@1x.jpg" alt="Фото цветущего кактуса на фоне гор">
             </picture>
             <div class="gallery-list__wrapper gallery-list__wrapper--gray">
               <div class="gallery-list__wrapper-description">
@@ -108,9 +108,9 @@
           </div>
           <div class="gallery-list__item gallery-list__item--3">
             <picture class="gallery-list__photo">
-              <source media="(min-width: 1200px)" srcset="img/photo-3-desktop.jpg">
-              <source media="(min-width: 768px)" srcset="img/photo-3-tablet.jpg">
-              <img class="gallery-list__photo" src="../img/photo-3-mobile@1x.jpg" alt="Фото горного серпантина">
+              <source media="(min-width: 1200px)" srcset="./img/photo-3-desktop.jpg">
+              <source media="(min-width: 768px)" srcset="./img/photo-3-tablet.jpg">
+              <img class="gallery-list__photo" src="./img/photo-3-mobile@1x.jpg" alt="Фото горного серпантина">
             </picture>
             <div class="gallery-list__wrapper gallery-list__wrapper--gray">
               <div class="gallery-list__wrapper-description">
@@ -131,9 +131,9 @@
           </div>
           <div class="gallery-list__item gallery-list__item--4">
             <picture class="gallery-list__photo">
-              <source media="(min-width: 1200px)" srcset="img/photo-4-desktop.jpg">
-              <source media="(min-width: 768px)" srcset="img/photo-4-tablet.jpg">
-              <img class="gallery-list__photo" src="../img/photo-4-mobile@1x.jpg" alt="Каньон">
+              <source media="(min-width: 1200px)" srcset="./img/photo-4-desktop.jpg">
+              <source media="(min-width: 768px)" srcset="./img/photo-4-tablet.jpg">
+              <img class="gallery-list__photo" src="./img/photo-4-mobile@1x.jpg" alt="Каньон">
             </picture>
             <div class="gallery-list__wrapper gallery-list__wrapper--gray">
               <div class="gallery-list__wrapper-description">
