стилизация input на странице формы

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -62,7 +62,7 @@
           </div>
           <div class="gallery-list__item gallery-list__item--1">
             <picture class="gallery-list__photo">
-              <source media="(min-width: 1200px)" srcset="./mg/photo-1-desktop.jpg">
+              <source media="(min-width: 1200px)" srcset="./img/photo-1-desktop.jpg">
               <source media="(min-width: 768px)" srcset="./img/photo-1-tablet.jpg">
               <img src="./img/photo-1-mobile@1x.jpg" alt="Фото дороги во время заката солнца на фоне гор">
             </picture>
