--- a/source/form.html
+++ b/source/form.html
@@ -144,7 +144,7 @@
                   </div>
 
                   <div class="testimonials-filters__group form-button">
-                    <button class="testimonials-filters__button button" type="submit">Отправить отзыв</button>
+                    <button class="testimonials-filters__button button testimonials-filters__button--disabled" type="submit">Отправить отзыв</button>
                     <span class="testimonials-filters__marked"><sup>*</sup> — обязательные поля</span>
                   </div>
                 </div>
