создал модальные окна

--- a/source/form.html
+++ b/source/form.html
@@ -203,6 +203,23 @@
       </footer>
     </div>
 
+    <div class="modal-failure modal-failure--container">
+      <section class="modal-failure__section">
+        <h3 class="visually-hidden">Форма не сработала</h3>
+        <p class="modal-failure__text">Что-то пошло не так!</p>
+        <p class="modal-failure__description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+        <button class="button modal-failure__button" type="button">Ok</button>
+      </section>
+    </div>
+
+    <div class="modal-success modal-success--container">
+      <section class="modal-success__section">
+        <h3 class="modal-success__header">Ваш отзыв отправлен!</h3>
+        <p class="modal-success__description">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</p>
+        <button class="button modal-success__buton">Закрыть окно</button>
+      </section>
+    </div>
+
     <script src="./js/script.js"></script>
   </body>
 </html>
