переназначал цвета в rgba, починил фокус  в форме

--- a/source/form.html
+++ b/source/form.html
@@ -100,18 +100,18 @@
                   <div class="testimonials-filters__group opinion">
                     <label class="testimonials-filters__title">Ваше общее впечатление:</label>
                     <div class="radio-button">
-                      <label class="radio-button__label">
-                        <input class="visually-hidden radio-button__input" type="radio" name="opinion" value="positive" tabindex="1" checked>
+                      <label class="radio-button__label" for="rad">
+                        <input class="visually-hidden radio-button__input" type="radio" name="opinion" id="rad" value="positive" tabindex="0" checked>
                         <span class="radio-button__mark"></span>
                         <span class="radio-button__text">Скорее положительное</span>
                       </label>
                       <label class="radio-button__label">
-                        <input class="visually-hidden radio-button__input" type="radio" name="opinion" value="negative" tabindex="2">
+                        <input class="visually-hidden radio-button__input" type="radio" name="opinion" value="negative">
                         <span class="radio-button__mark"></span>
                         <span class="radio-button__text">Скорее отрицательное</span>
                       </label>
                       <label class="radio-button__label">
-                        <input class="visually-hidden radio-button__input" type="radio" name="opinion" value="abstain" tabindex="3">
+                        <input class="visually-hidden radio-button__input" type="radio" name="opinion" value="abstain">
                         <span class="radio-button__mark"></span>
                         <span class="radio-button__text">Затрудняюсь ответить</span>
                       </label>
