стилизовал под макет главную страницу

--- a/source/index.html
+++ b/source/index.html
@@ -80,14 +80,14 @@
 
         <section class="advantages-list">
           <div class="advantages-list__header advantages-list__wrapper">
-            <h2 class="advantages-list__title">Седона — небольшой<br> городок в Аризоне,<br> заслуживающий большего!</h2>
+            <h2 class="advantages-list__title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
             <p class="advantages-list__description">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
           </div>
           <div class="advantages-list__wrapper-block">
             <div class="advantages-list__item advantages-list__item--first advantages-list__wrapper advantages-list__item--blue advantages-list__item--triangle">
-              <h3 class="advantages-list__item-subject advantages-list__item-subject--first">Настоящий<br> городок</h3>
+              <h3 class="advantages-list__item-subject advantages-list__item-subject--first">Настоящий городок</h3>
               <p class="advantages-list__numbering">— №1 —</p>
-              <p class="advantages-list__description-excerpt">Cедона не аттракцион для<br> туристов,<br> там течет своя<br> жизнь</p>
+              <p class="advantages-list__description-excerpt">Cедона не аттракцион для туристов, там течет своя жизнь</p>
             </div>
             <div class="advantages-list__item-picture advantages-list__item-picture--first"></div>
           </div>
@@ -111,12 +111,12 @@
                 <use xlink:href="#icon-present"></use>
               </svg>
               <h4 class="advantages-list__subject-title">Сувениры</h4>
-              <p class="advantages-list__subject-description">Не только китайского, но и местного производства!</p>
+              <p class="advantages-list__subject-description">Не только китайского,<br> но и местного производства!</p>
             </div>
           </div>
           <div class="advantages-list__wrapper-block advantages-list__wrapper-block--reverse">
             <div class="advantages-list__item advantages-list__item-second advantages-list__wrapper advantages-list__item--blue">
-              <h3 class="advantages-list__item-subject">Там есть<br> Мост дьявола</h3>
+              <h3 class="advantages-list__item-subject">Там есть Мост дьявола</h3>
               <p class="advantages-list__numbering">— №2 —</p>
               <p class="advantages-list__description-excerpt">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
             </div>
@@ -124,19 +124,19 @@
           </div>
           <div class="advantages-list__wrapper-block advantages-list__wrapper-block__grid advantages-list__wrapper-block--gray">
             <div class="advantages-list__item advantages-list__wrapper-item advantages-list__item--third advantages-list__item--gray">
-              <h3 class="advantages-list__item-subject advantages-list__subject-title-padding">Небольшая<br> площадь</h3>
+              <h3 class="advantages-list__item-subject advantages-list__subject-title-padding">Небольшая площадь</h3>
               <p class="advantages-list__numbering">— №3 —</p>
-              <p class="advantages-list__description-excerpt">Все интересные места находятся<br> очень близко</p>
+              <p class="advantages-list__description-excerpt">Все интересные места находятся очень близко</p>
             </div>
             <div class="advantages-list__item advantages-list__wrapper-item advantages-list__item--fourth advantages-list__item--gray">
-              <h3 class="advantages-list__item-subject advantages-list__subject-title-padding">Красивая<br> дорога</h3>
+              <h3 class="advantages-list__item-subject advantages-list__subject-title-padding">Красивая дорога</h3>
               <p class="advantages-list__numbering">— №4 —</p>
-              <p class="advantages-list__description-excerpt">Ехать в Седону из Лас-Вегаса<br> совсем не скучно!</p>
+              <p class="advantages-list__description-excerpt">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </div>
             <div class="advantages-list__item advantages-list__wrapper-item advantages-list__item--fifth advantages-list__item--gray">
-              <h3 class="advantages-list__item-subject advantages-list__subject-title-padding">Мало<br> туристов</h3>
+              <h3 class="advantages-list__item-subject advantages-list__subject-title-padding">Мало туристов</h3>
               <p class="advantages-list__numbering">— №5 —</p>
-              <p class="advantages-list__description-excerpt">Большинство едет в Гранд Каньон<br> и толпится там</p>
+              <p class="advantages-list__description-excerpt">Большинство едет в Гранд Каньон и толпится там</p>
             </div>
           </div>
         </section>
@@ -145,7 +145,7 @@
           <div class="offer__wrapper">
             <h2 class="visually-hidden">Поиск гостиниц в Сейдоне</h2>
             <b class="offer__sentence">Заинтересовались?</b>
-            <p class="offer__description">Укажите предполагаемые даты<br> поездки,<br> и мы покажем вам лучшие<br> предложения гостиниц в Седоне</p>
+            <p class="offer__description">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
             <a class="button button--blue offer__button offer__button--disabled" href="#">Найти гостиницу</a>
           </div>
           <div class="offer__map">
