подгонка проекта пиксель перфект

--- a/source/form.html
+++ b/source/form.html
@@ -64,7 +64,7 @@
         <div class="main-form__wrapper main-form__wrapper--flex">
           <section class="review">
             <h2 class="review__title">Оставьте свой отзыв</h2>
-            <p class="review__description">Помогите нашим отелям стать лучше!<br> Оставьте отзыв о них,<br> а также о<br> посещенных вами<br> достопримечательностях</p>
+            <p class="review__description">Помогите нашим отелям стать лучше!<br>&nbsp Оставьте отзыв о них,<br>&nbsp а также о<br>&nbsp посещенных вами<br>&nbsp достопримечательностях</p>
           </section>
 
           <section class="testimonials-section">
