--- a/source/index.html
+++ b/source/index.html
@@ -113,7 +113,7 @@
                 <use xlink:href="#icon-present"></use>
               </svg>
               <h4 class="advantages-list__subject-title">Сувениры</h4>
-              <p class="advantages-list__subject-description">Не только китайского,<br> но и местного производства!</p>
+              <p class="advantages-list__subject-description">Не только китайского,<br>&nbspно и местного производства!</p>
             </div>
           </div>
           <div class="advantages-list__wrapper-block advantages-list__wrapper-block--reverse">
@@ -147,7 +147,7 @@
           <div class="offer__wrapper">
             <h2 class="visually-hidden">Поиск гостиниц в Сейдоне</h2>
             <b class="offer__sentence">Заинтересовались?</b>
-            <p class="offer__description">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+            <p class="offer__description">Укажите предполагаемые даты поездки,<br>&nbsp и мы покажем вам лучшие предложения гостиниц в Седоне</p>
             <a class="button button--blue offer__button offer__button--disabled" href="#">Найти гостиницу</a>
           </div>
           <div class="offer__map">
